--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -311,7 +311,7 @@
           </div>
           <div class="menu-item__bar"></div>
         </li>
-        <li class="menu-item --settings" data-link="settingss">
+        <li class="menu-item --settings" data-link="settings">
           <div class="menu-item__body">
             <div class="menu-item__icon">
               <i class="icon icon-cog --round-icon"></i>
@@ -393,78 +393,7 @@
       <!-- Shared begin -->
       <section class="menu-section --shared" data-link="shared">
         <div class="shared">
-          <div class="shared__item">
-            <div class="row-date date">
-              Il y a 2 heures
-            </div>
-            <div class="row-pic">
-              <div class="row-pic__image">
-                <img src="/img/test/8.jpg" width="100%">
-              </div>
-              <div class="row-pic__icon --round-icon">
-                <i class="icon icon-forward"></i>
-              </div>
-            </div>
-            <div class="row-body">
-              <div class="row-body__title">
-                <h2>Before partagé par Cindy</h2>
-              </div>
-              <div class="row-body__subtitle">
-                <div class="row-body__icon --round-icon">
-                  <i class="icon icon-location"></i>
-                </div>
-                <h4>25 Rue des martyrs, 75006 Paris</h4>
-              </div>
-            </div>
-          </div>
-          <div class="shared__item">
-            <div class="row-date date">
-              Il y a 2 heures
-            </div>
-            <div class="row-pic">
-              <div class="row-pic__image">
-                <img src="/img/test/9.jpg" width="100%">
-              </div>
-              <div class="row-pic__icon --round-icon">
-                <i class="icon icon-forward"></i>
-              </div>
-            </div>
-            <div class="row-body">
-              <div class="row-body__title">
-                <h2>Before partagé par Camille</h2>
-              </div>
-              <div class="row-body__subtitle">
-                <div class="row-body__icon --round-icon">
-                  <i class="icon icon-location"></i>
-                </div>
-                <h4> 99 Avenue de la République, 75009 Paris</h4>
-              </div>
-            </div>
-          </div>
-          <div class="shared__item">
-            <div class="row-date date">
-              16:25
-            </div>
-            <div class="row-pic">
-              <div class="row-pic__image">
-                <img src="/img/test/10.jpg" width="100%">
-              </div>
-              <div class="row-pic__icon --round-icon">
-                <i class="icon icon-forward"></i>
-              </div>
-            </div>
-            <div class="row-body">
-              <div class="row-body__title">
-                <h2>Before partagé par Arielle</h2>
-              </div>
-              <div class="row-body__subtitle">
-                <div class="row-body__icon --round-icon">
-                  <i class="icon icon-location"></i>
-                </div>
-                <h4>37 rue du Four, 75006 Paris</h4>
-              </div>
-            </div>
-          </div>
+          <!-- %% Dynamically injected %%-->
         </div>
       </section>
       <!-- Shared end -->
@@ -483,78 +412,7 @@
           </div>
         </div>
         <div class="meepass">
-          <div class="meepass__item" data-link="received">
-            <div class="row-date date">
-              Il y a 2 heures
-            </div>
-            <div class="row-pic">
-              <div class="row-pic__image">
-                <img src="/img/test/1.jpg" width="100%">
-              </div>
-              <div class="row-pic__icon --round-icon">
-                <i class="icon icon-meepass"></i>
-              </div>
-            </div>
-            <div class="row-body">
-              <div class="row-body__title">
-                <h2>Reçu de Mathilda</h2>
-              </div>
-              <div class="row-body__subtitle">
-                <div class="row-body__icon --round-icon">
-                  <i class="icon icon-location"></i>
-                </div>
-                <h4>Pour un before le <span class="date">22/04/16</span></h4>
-              </div>
-            </div>
-          </div>
-          <div class="meepass__item" data-link="received">
-            <div class="row-date date">
-              Il y a 2 heures
-            </div>
-            <div class="row-pic">
-              <div class="row-pic__image">
-                <img src="/img/test/2.jpg" width="100%">
-              </div>
-              <div class="row-pic__icon --round-icon">
-                <i class="icon icon-meepass"></i>
-              </div>
-            </div>
-            <div class="row-body">
-              <div class="row-body__title">
-                <h2>Reçu de Juliette</h2>
-              </div>
-              <div class="row-body__subtitle">
-                <div class="row-body__icon --round-icon">
-                  <i class="icon icon-location"></i>
-                </div>
-                <h4>Pour un before le <span class="date">19/04/16</span></h4>
-              </div>
-            </div>
-          </div>
-          <div class="meepass__item" data-link="sent">
-            <div class="row-date date">
-              16:25
-            </div>
-            <div class="row-pic">
-              <div class="row-pic__image">
-                <img src="/img/test/3.jpg" width="100%">
-              </div>
-              <div class="row-pic__icon --round-icon">
-                <i class="icon icon-meepass"></i>
-              </div>
-            </div>
-            <div class="row-body">
-              <div class="row-body__title">
-                <h2>Envoyé à Charline</h2>
-              </div>
-              <div class="row-body__subtitle">
-                <div class="row-body__icon --round-icon">
-                  <i class="icon icon-location"></i>
-                </div>
-                <h4>Pour un before le <span class="date">30/04/16</span></h4>
-              </div>
-            </div>
-          </div>
+          <!-- %% Dynamically injected %%-->
         </div>
       </section>
       <!-- Meepass end -->
@@ -563,72 +421,7 @@
       <!-- Friends begin -->
       <section class="menu-section --friends" data-link="friends">
         <div class="friends">
-          <div class="friend__item">
-            <div class="row-pic">
-              <div class="row-pic__image">
-                <img src="/img/test/4.jpg" width="100%">
-              </div>
-            </div>
-            <div class="row-body">
-              <div class="row-body__title">
-                <h2>Cindy L.</h2>
-              </div>
-              <div class="row-body__subtitle">
-                <div class="row-body__icon --round-icon">
-                  <i class="icon icon-education"></i>
-                </div>
-                <h4>Vendeuse chez Zara</h4>
-              </div>
-            </div>
-          </div>
-          <div class="friend__item">
-            <div class="row-pic">
-              <div class="row-pic__image">
-                <img src="/img/test/5.jpg" width="100%">
-              </div>
-            </div>
-            <div class="row-body">
-              <div class="row-body__title">
-                <h2>Mam'zelle Jolie</h2>
-              </div>
-              <div class="row-body__subtitle">
-                <div class="row-body__icon --round-icon">
-                  <i class="icon icon-education"></i>
-                </div>
-                <h4>Farniente</h4>
-              </div>
-            </div>
-          </div>
-          <div class="friend__item">
-            <div class="row-pic">
-              <div class="row-pic__image">
-                <img src="/img/test/6.jpg" width="100%">
-              </div>
-            </div>
-            <div class="row-body">
-              <div class="row-body__title">
-                <h2>Kath'</h2>
-              </div>
-              <div class="row-body__subtitle">
-                <div class="row-body__icon --round-icon">
-                  <i class="icon icon-education"></i>
-                </div>
-                <h4>Etudiante</h4>
-              </div>
-            </div>
-          </div>
-          <div class="friend__item">
-            <div class="row-pic">
-              <div class="row-pic__image --round-icon">
-                <i class="icon icon-user-add"></i>
-              </div>
-            </div>
-            <div class="row-body">
-              <div class="row-body__title">
-                <h1>Invitez plus d'amis</h2>
-              </div>
-            </div>
-          </div>
+          <!-- %% Dynamically injected %%-->
         </div>
       </section>
       <!-- Friends end -->
@@ -638,6 +431,44 @@
       <section class="menu-section --settings" data-link="settings">
         <div class="menu-section__subtitle">
           <h3 data-lid="menu_subsection_account"></h3>
+        </div>
+        <div class="settings-part --account">
+          <div class="settings-item">
+            <div class="toggle">
+              <div class="toggle__label">Afficher les nationalités étrangères</div>
+              <div class="toggle-btn">
+                <div class="toggle-btn__button"></div>
+              </div>
+              <div class="toggle__explanation">Ceci est une explication</div>
+            </div>
+          </div>
+          <div class="settings-item">
+            <div class="toggle">
+              <div class="toggle__label">Afficher les sexes </div>
+              <div class="toggle-btn --active">
+                <div class="toggle-btn__button"></div>
+              </div>
+              <div class="toggle__explanation">Ceci est une autre belle explication</div>
+            </div>
+          </div>
+        </div>
+        <div class="menu-section__subtitle">
+          <h3 data-lid="menu_subsection_code"></h3>
+        </div>
+        <div class="settings-part --code">
+          
+        </div>
+        <div class="menu-section__subtitle">
+          <h3 data-lid="menu_subsection_notifications"></h3>
+        </div>
+        <div class="settings-part --notifications">
+          
+        </div>
+        <div class="menu-section__subtitle">
+          <h3 data-lid="menu_subsection_ux"></h3>
+        </div>
+        <div class="settings-part --ux">
+          
         </div>
       </section>
       <!-- Settings end -->
