--- a/public/css/src/app/app_layout.css
+++ b/public/css/src/app/app_layout.css
@@ -35,6 +35,7 @@
 	height:100%;
 	border-radius: 100px;
 }
+.row-pic__image i { margin: auto; }
 .row-pic.--invite-friends {font-size: 50px;background: #7b4cbb;border-radius: 100px;color: white;}
 .row-pic__image img {
 
@@ -65,6 +66,11 @@
 	display: flex;
 	align-items: center;
 }
+.row-body__age {
+	font-family: 'Open Sans';
+	font-size: 20px;
+	margin-left: 6px;
+}
 .row-body h1 {
 	font-family: 'Creamy Script';
 	font-size: 30px;
@@ -77,3 +83,20 @@
 
 .row-body h4 {color: #919191;font-size: 14px;font-weight: 300;font-family: 'Open sans';}
 .row-body h4 span { font-size: 14px; margin-left: 2px;}
+
+
+.toggle {display: flex;position: relative;align-items: center;}
+
+.toggle__label {
+
+}
+.toggle__explanation {position: absolute;bottom: -30px;right: 0;}
+
+.toggle-btn {height: 50px;width: 100px;background: red;border-radius: 100px;margin-left: auto;order: 100;border: 1px solid black;}
+.toggle-btn.--active {
+
+}
+.toggle-btn__button {
+
+}
+
