--- a/public/css/src/meepass/meepass.css
+++ b/public/css/src/meepass/meepass.css
@@ -3,17 +3,15 @@
 
 }
 
-.menu-section.--meepass .menu-section-segment {
+.menu-section.--meepass .menu-section-segment {}
 
-}
-
-.meepass {width: 100%;}
+.meepass {width: 100%;min-height: 280px;display: flex;flex-flow: column nowrap;}
 
 .meepass__item {
 	border-bottom: 1px solid #eee;
 	position: relative;
 	padding: 16px 20px;
-	display: flex;
+	display: none;
 	flex-flow: row nowrap;
 	justify-content: flex-start;
 	align-items: center;
