--- a/public/css/src/profile/profile.css
+++ b/public/css/src/profile/profile.css
@@ -17,7 +17,7 @@
 .me__input .me__input-field {
     padding: 8px 10px 10px 0;
     outline: none;
-    border: none;
+    border: 1px solid white;
     border-bottom: 1px solid #eee;
     width: 100%;
     box-sizing: border-box;
@@ -69,8 +69,9 @@
 
 .me__input.active .me__input-field {
     background: #EFF9FF;
+    border: 1px solid #1B69EC;
+    border-radius: 40px;
     padding-left: 20px;
-    border-radius: 30px;
 }
 
 .me__input--no-edit .me__input-field {
@@ -80,7 +81,7 @@
 
 .me__input .me__input-action {
   top: 17px;
-  right: 10px;
+  right: 5px;
   left: auto;
   display: none;
   cursor: pointer;
@@ -95,7 +96,7 @@
 
 
 .me__input .me__action-validate {
-  right: 56px;
+  right: 49px;
 }
 .me__input .me__action-cancel {
 }
